HSEARCH-2356 Latest Java 9 preview builds need --add-modules instead of -addmods as build option